@@ -1,6 +1,8 @@
 0.14:
   - Allow providing a custom exception logger
     to 'locked' decorator
+  - Allow providing a custom logger to process
+    lock class
 0.13:
   - Fix 'ensure_tree' check on freebsd
 0.12:
